[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "faker_music"
author = "Jeff Wright"
author-email = "jeff.washcloth@gmail.com"
home-page = "https://github.com/jeffwright13/faker_music/"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

[tool.flit.metadata.requires-extra]
test = ["pytest", "pytest-cov", "tox"]